tdf#113935 Switching from read-only to edit mode slow

Regression introduced by

    commit 389da66dfc96d06c407bff156c4ea21e940c5e06
    remove unused uno::Reference vars

I'm guessing this variable keeps some kind of cache alive which prevents
us from re-parsing the PDF file when we switch to edit mode - which is
clearly what we are doing when I remove the line.

Change-Id: Iea2cf9640d876028a78806e717b930d4a063dc9b